[project]
name = "lunchflowpy"
version = "0.1.2"
description = "Typed Python SDK for the Lunch Flow API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.0",
    "pandas>=3.0.3",
]

[project.urls]
Documentation = "https://www.lunchflow.app/docs/what-is-lunch-flow"
Source = "https://github.com/Finnegan1/LunchFlowPy"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lunchflow"]

[dependency-groups]
dev = [
    "build>=1.2.0",
    "mypy>=1.16.0",
    "pandas-stubs>=3.0.3.260530",
    "pytest>=8.4.0",
    "ruff>=0.12.0",
]

[tool.mypy]
python_version = "3.13"
strict = true
packages = ["lunchflow"]

[tool.pytest.ini_options]
testpaths = ["tests"]
